z-index score of 10 used to ensure the top of the card view is restored.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -236,6 +236,7 @@
     border-radius: 0.5rem;
     /* position of card top side set to parent */
     position: relative;
+    z-index: 10;
 }
 
 .tour-id {
